<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_row_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_multiply"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/x"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_row_count"
            app:layout_constraintEnd_toStartOf="@id/tv_column_count"
            app:layout_constraintStart_toEndOf="@id/tv_row_count"
            app:layout_constraintTop_toTopOf="@id/tv_row_count" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_column_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_row_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_multiply"
            app:layout_constraintTop_toTopOf="@id/tv_row_count"
            tools:text="4" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_piece_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:text="1"
            android:textCursorDrawable="@drawable/black_cursor"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:backgroundTint="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_column_count"
            app:layout_constraintStart_toStartOf="@id/tv_row_count"
            app:layout_constraintTop_toBottomOf="@+id/tv_row_count" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/grid_set_description"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_piece_count" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_puzzle"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_button"
            android:minHeight="55dp"
            android:text="@string/get_puzzle"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>