<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_close"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_close" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_refresh"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_report"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_refresh" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_report"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_report" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/puzzle_board"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toTopOf="@id/puzzle_piece_list"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0">

                <com.example.better_puzzle_maker.view.PuzzleBoarView
                    android:id="@+id/rv_puzzle_board"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puzzle_description_title"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_description"
                app:layout_constraintStart_toStartOf="@+id/puzzle_board"
                app:layout_constraintTop_toBottomOf="@+id/puzzle_board"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/puzzle_description"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@+id/puzzle_piece_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_description_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_title" />

            <com.example.better_puzzle_maker.view.PuzzlePieceListView
                android:id="@+id/puzzle_piece_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/grey"
                android:minHeight="120dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_stop_watching"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:minHeight="55dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/stop_watching"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_pass"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/tv_description"
                app:layout_constraintTop_toBottomOf="@+id/puzzle_piece_list"

                app:layout_constraintWidth_default="wrap" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_pass"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_button"
                android:minHeight="55dp"
                android:text="@string/pass"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_stop_watching"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_stop_watching"
                app:layout_constraintTop_toTopOf="@+id/btn_stop_watching"
                app:layout_constraintWidth_default="wrap" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>